force-app/main/default/objects/PSP_Show_Attendee__c/PSP_Show_Attendee__c.object-meta.xml
<CustomObject>
    <description>Which children are attending a puppet show at a school who are part of a cq family.  Note this auto populated using a trigger based on children linked to the school who are 13 and under.</description>
    <label>PSP Attendee</label>
    <nameField>
        <displayFormat>PSPA-{000}</displayFormat>
        <label>Attendee</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSP Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>