force-app/main/default/objects/PSP_Show_Attendee__c/fields/Attendee_Age__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Age__c</fullName>
    <formula>Contact__r.Age__c</formula>
    <label>Attendee Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>