force-app/main/default/objects/PSP_Show_Attendee__c/fields/Attendee_Family__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee Family</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PSP Attendees</relationshipLabel>
    <relationshipName>PSP_Attendees_Family</relationshipName>
    <type>Lookup</type>
</CustomField>