force-app/main/default/objects/PSP_Show_Attendee__c/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <formula>Contact__r.FirstName &amp; &quot; &quot; &amp;  Contact__r.LastName</formula>
    <label>Attendee Name</label>
    <type>Text</type>
</CustomField>