force-app/main/default/objects/PSP_Show_Attendee__c/fields/Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Type__c</fullName>
    <formula>if (Contact__r.npsp__Deceased__c , &quot;Deceased&quot; &amp; text(Contact__r.Family_Member_Type__c),text(Contact__r.Family_Member_Type__c))</formula>
    <label>Attendee Type</label>
    <type>Text</type>
</CustomField>