force-app/main/default/objects/PSP_Show_Attendee__c/fields/Legacy_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy_External_ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>