force-app/main/default/objects/PSP_Show_Attendee__c/fields/Puppet_Show__c.field-meta.xml
<CustomField>
    <fullName>Puppet_Show__c</fullName>
    <label>Puppet Show</label>
    <referenceTo>PuppetShow__c</referenceTo>
    <relationshipName>PSP_Show_Attendees</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>