force-app/main/default/objects/PSP_Show_Attendee__c/fields/Show_Date2__c.field-meta.xml
<CustomField>
    <fullName>Show_Date2__c</fullName>
    <label>Show Date2</label>
    <type>Date</type>
</CustomField>