force-app/main/default/objects/PSP_Show_Attendee__c/fields/Show_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Date__c</fullName>
    <formula>Puppet_Show__r.Show_Date__c</formula>
    <label>Show Date</label>
    <type>Date</type>
</CustomField>