force-app/main/default/objects/PSP_Show_Attendee__c/fields/Show_Performed__c.field-meta.xml
<CustomField>
    <fullName>Show_Performed__c</fullName>
    <formula>if(text( Puppet_Show__r.Show_Status__c ) = &quot;Performed&quot;, True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Performed</label>
    <type>Checkbox</type>
</CustomField>