force-app/main/default/objects/PSP_Show_Attendee__c/fields/Show_Status__c.field-meta.xml
<CustomField>
    <fullName>Show_Status__c</fullName>
    <formula>TEXT( Puppet_Show__r.Show_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Status</label>
    <type>Text</type>
</CustomField>