force-app/main/default/objects/PSP_Show_Attendee__c/fields/Show_Type__c.field-meta.xml
<CustomField>
    <fullName>Show_Type__c</fullName>
    <formula>TEXT( Puppet_Show__r.Show_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Type</label>
    <type>Text</type>
</CustomField>