force-app/main/default/objects/PSP_Show_Attendee__c/fields/Temp__c.field-meta.xml
<CustomField>
    <fullName>Temp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp</label>
    <type>Checkbox</type>
</CustomField>