force-app/main/default/objects/PSP_Show_Attendee__c/listViews/This_year_or_last.listView-meta.xml
<ListView>
    <fullName>This_year_or_last</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR,LAST_YEAR</value>
    </filters>
    <label>This year or last</label>
</ListView>